--- a/src/app/film/update-film/update-titel.component.html
+++ b/src/app/film/update-film/update-titel.component.html
@@ -26,7 +26,7 @@
             Ein Filmtitel muss mindestens 2 Zeichen lang sein.
           </span>
           <span *ngIf="titel.errors['pattern']">
-            Ein Filmtitel muss mit einem Filmstaben oder einer Ziffer beginnen.
+            Ein Filmtitel muss mit einem Buchstaben oder einer Ziffer beginnen.
           </span>
         </span>
       </div>
