--- a/src/app/film/update-film/update-film.component.html
+++ b/src/app/film/update-film/update-film.component.html
@@ -21,6 +21,7 @@
         <div class="col offset-2 gy-3">
           <!-- form.pristine ist das Gegenteil von form.dirty -->
           <button
+            style="background-color: grey"
             type="submit"
             class="btn btn-primary"
             [disabled]="updateForm.pristine || updateForm.invalid"
