--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -12,7 +12,7 @@
   <div class="card-header" style="background-color: grey">
     <i class="material-icons" style="color: white">search</i>
     <span class="ms-1 fw-bold" style="font-size: larger" style="color: white">
-      Suchekriterien
+      Suchkriterien
     </span>
   </div>
   <div class="card-body">
