--- a/src/app/film/create-film/create-film.component.html
+++ b/src/app/film/create-film/create-film.component.html
@@ -37,10 +37,12 @@
       <hs-create-genre [createForm]="createForm"></hs-create-genre>
       <hs-create-studio [createForm]="createForm"></hs-create-studio>
       <hs-create-online [createForm]="createForm"></hs-create-online>
+      <hs-create-datum [createForm]="createForm"></hs-create-datum>
+      <hs-create-homepage [createForm]="createForm"></hs-create-homepage>
       <hs-create-schlagwoerter
         [createForm]="createForm"
       ></hs-create-schlagwoerter>
-      <hs-create-homepage [createForm]="createForm"></hs-create-homepage>
+      
 
       <div class="row">
         <div class="col offset-2 gy-3">
