Änderung der Angabe für richtige website

--- a/src/app/film/create-film/create-homepage.component.html
+++ b/src/app/film/create-film/create-homepage.component.html
@@ -24,7 +24,7 @@
           class="ms-1"
           *ngIf="homepage.errors['required'] || homepage.errors['pattern']"
         >
-          Eine g&uuml;ltige Homepage, z.B. www.homepage.com, muss eingegeben
+          Eine g&uuml;ltige Homepage, z.B. https\\:homepage.com, muss eingegeben
           werden.
         </span>
       </div>
