--- a/src/app/film/update-film/update-film.component.html
+++ b/src/app/film/update-film/update-film.component.html
@@ -9,8 +9,10 @@
       </hs-update-genre>
       <hs-update-studio [updateForm]="updateForm" [currentValue]="film.studio">
       </hs-update-studio>
-      <hs-update-rating [updateForm]="updateForm" [currentValue]="film.rating">
-      </hs-update-rating>
+      <hs-update-bewertung [updateForm]="updateForm" [currentValue]="film.bewertung">
+      </hs-update-bewertung>
+      <hs-update-isan [updateForm]="updateForm" [currentValue]="film.isan">
+      </hs-update-isan>
       <hs-update-homepage
         [updateForm]="updateForm"
         [currentValue]="film.homepage"
