--- a/src/app/film/suche-filme/suchformular/suchformular.component.html
+++ b/src/app/film/suche-filme/suchformular/suchformular.component.html
@@ -50,11 +50,11 @@
       <hs-suche-titel (titel$)="setTitel($event)"></hs-suche-titel>
       <hs-suche-studio (studio$)="setStudio($event)"></hs-suche-studio>
       <hs-suche-genre (genre$)="setGenre($event)"></hs-suche-genre>
-      <hs-suche-schlagwoerter
-        (spannend$)="setSpannend($event)"
-        (gruselig$)="setGruselig($event)"
+      <hs-suche-schauspieler
+        (salma$)="setSalma($event)"
+        (leonardo$)="setLeonardo($event)"
       >
-      </hs-suche-schlagwoerter>
+      </hs-suche-schauspieler>
 
       <!-- vertikale und horizontale "Gutter" als Abstaende ("gaps") zwischen den Spalten -->
       <!-- https://v5.getbootstrap.com/docs/5.0/layout/gutters/#horizontal-gutters -->
