--- a/src/app/film/create-film/create-online.component.html
+++ b/src/app/film/create-film/create-online.component.html
@@ -1,15 +1,15 @@
 <div class="row">
-  <label for="onlineInput" class="col col-2 col-form-label gy-3">
-    Online?
+  <label for="newsletterInput" class="col col-2 col-form-label gy-3">
+    Newsletter?
   </label>
 
   <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="form-checkbox">
       <input
-        id="onlineInput"
+        id="newsletterInput"
         type="checkbox"
         class="form-check-input"
-        formControlName="online"
+        formControlName="newsletter"
       />
     </div>
   </div>
