--- a/src/app/film/create-film/create-rating.component.html
+++ b/src/app/film/create-film/create-rating.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <label class="col col-2 col-form-label gy-3">Rating </label>
+  <label class="col col-2 col-form-label gy-3">Bewertung </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
-    <select class="form-select" formControlName="rating">
-      <option value="">Rating ausw&auml;hlen</option>
+    <select class="form-select" formControlName="bewertung">
+      <option value="">Bewertung ausw&auml;hlen</option>
       <optgroup label="Hoch"><option value="5">5</option></optgroup>
       <optgroup label="Mittel">
         <option value="4">4</option>
