Rating zu Bewertung in Diagramme

--- a/src/app/film/diagramme/balkendiagramm.html
+++ b/src/app/film/diagramme/balkendiagramm.html
@@ -1,4 +1,4 @@
-<h3>Rating der Filme</h3>
+<h3>Bewertung der Filme</h3>
 
 <section id="balkendiagramm">
   <ngx-charts-bar-vertical
@@ -7,7 +7,7 @@
     [xAxisLabel]="'Titel'"
     [showXAxisLabel]="true"
     [yAxis]="true"
-    [yAxisLabel]="'Rating '"
+    [yAxisLabel]="'Bewertung '"
     [showYAxisLabel]="true"
     [gradient]="true"
   >
