--- a/src/app/film/diagramme/tortendiagramm.html
+++ b/src/app/film/diagramme/tortendiagramm.html
@@ -1,4 +1,4 @@
-<h3>Rating der Filme</h3>
+<h3>Bewertung der Filme</h3>
 
 <section id="tortendiagramm" mt="5">
   <ngx-charts-pie-chart [results]="dataItems"> </ngx-charts-pie-chart>
