Schauspieler im create angepasst

--- a/src/app/film/create-film/create-schauspieler.component.html
+++ b/src/app/film/create-film/create-schauspieler.component.html
@@ -1,26 +1,26 @@
 <div class="row">
   <label for="schauspielerInput" class="col col-2 col-form-label gy-3">
-    schauspieler
+    Schauspieler
   </label>
   <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="spannendInput"
-        formControlName="spannend"
+        id="salmaInput"
+        formControlName="salma"
       />
-      <label for="spannendInput" class="ms-1">Spannend</label>
+      <label for="spannendInput" class="ms-1">Salma</label>
     </div>
 
     <div class="form-checkbox">
       <input
         type="checkbox"
         class="form-check-input"
-        id="gruseligInput"
-        formControlName="gruselig"
+        id="leonardoInput"
+        formControlName="leonardo"
       />
-      <label for="gruseligInput" class="ms-1">Gruselig</label>
+      <label for="leonardoInput" class="ms-1">Leonardo</label>
     </div>
   </div>
 </div>
