details-ordner angepasst

--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -1,9 +1,11 @@
 <div *ngIf="film">
   <hs-details-titel [titel]="film.titel"></hs-details-titel>
-  <hs-details-rating [rating]="film.rating"></hs-details-rating>
+  <hs-details-bewertung [bewertung]="film.bewertung"></hs-details-bewertung>
   <hs-details-genre [genre]="film.genre"></hs-details-genre>
   <hs-details-studio [studio]="film.studio"></hs-details-studio>
-  <hs-details-datum [datum]="film.datum"></hs-details-datum>
-  <hs-details-online [online]="film.online"></hs-details-online>
+  <hs-details-release [release]="film.release"></hs-details-release>
+  <hs-details-newsletter [newsletter]="film.newsletter"></hs-details-newsletter>
+  <hs-details-regisseur [regisseur]="film.regisseur"></hs-details-regisseur>
+  <hs-details-umsatz [umsatz]="film.umsatz"></hs-details-umsatz>
   <hs-details-homepage [homepage]="film.homepage"></hs-details-homepage>
 </div>
