--- a/src/app/film/details-film/details-film.component.html
+++ b/src/app/film/details-film/details-film.component.html
@@ -22,17 +22,17 @@
           Stammdaten
         </a>
       </li>
-      <li class="nav-item" *ngIf="film.schlagwoerter.length > 0">
+      <li class="nav-item" *ngIf="film.schauspieler.length > 0">
         <a
           class="nav-link"
-          id="schlagwoerter-tab"
-          href="#schlagwoerter"
+          id="schauspieler-tab"
+          href="#schauspieler"
           data-bs-toggle="tab"
           role="tab"
-          aria-controls="schlagwoerter"
+          aria-controls="schauspieler"
           aria-expanded="true"
         >
-          Schlagwoerter
+          Schauspieler
         </a>
       </li>
     </ul>
@@ -51,14 +51,14 @@
 
       <div
         class="tab-pane fade"
-        id="schlagwoerter"
+        id="schauspieler"
         role="tabpanel"
-        aria-labelledby="schlagwoerter-tab"
-        *ngIf="film.schlagwoerter.length > 0"
+        aria-labelledby="schauspieler-tab"
+        *ngIf="film.schauspieler.length > 0"
       >
         <div class="mt-2 ms-2">
-          <hs-details-schlagwoerter [values]="film.schlagwoerter">
-          </hs-details-schlagwoerter>
+          <hs-details-schauspieler [values]="film.schauspieler">
+          </hs-details-schauspieler>
         </div>
       </div>
     </div>
