--- a/src/app/film/create-film/create-release.component.html
+++ b/src/app/film/create-film/create-release.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-  <label for="releaseInput" class="col col-2 col-form-label gy-3"> Release </label>
+  <label for="releaseInput" class="col col-2 col-form-label gy-3">
+    Release
+  </label>
 
   <div class="col col-5 gy-3" [formGroup]="createForm">
     <div class="btn-group">
