--- a/src/app/film/details-film/stammdaten/details-stammdaten.component.html
+++ b/src/app/film/details-film/stammdaten/details-stammdaten.component.html
@@ -8,4 +8,5 @@
   <hs-details-regisseur [regisseur]="film.regisseur"></hs-details-regisseur>
   <hs-details-umsatz [umsatz]="film.umsatz"></hs-details-umsatz>
   <hs-details-homepage [homepage]="film.homepage"></hs-details-homepage>
+  <hs-details-isan [isan]="film.isan"></hs-details-isan>
 </div>
