--- a/src/app/film/create-film/create-umsatz.component.html
+++ b/src/app/film/create-film/create-umsatz.component.html
@@ -2,7 +2,7 @@
   <label for="umsatzInput" class="col col-2 col-form-label gy-3"
     >Umsatz *</label
   >
-  <div class="col col-10 gy-3" [formGroup]="form">
+  <div class="col col-10 gy-3" [formGroup]="createForm">
     <div class="input-group">
       <input
         id="umsatzInput"
