Comedy in Lustig

--- a/src/app/film/create-film/create-genre.component.html
+++ b/src/app/film/create-film/create-genre.component.html
@@ -5,12 +5,12 @@
       <input
         type="radio"
         class="form-check-input"
-        id="ComedyInput"
+        id="LustigInput"
         formControlName="genre"
         name="genre"
-        value="COMEDY"
+        value="LUSTIG"
       />
-      <label class="radio-inline ms-1" for="ComedyInput"> Comedy </label>
+      <label class="radio-inline ms-1" for="LustigInput"> Lustig </label>
     </div>
 
     <div class="form-check">
