--- a/src/app/film/details-film/stammdaten/details-genre.component.html
+++ b/src/app/film/details-film/stammdaten/details-genre.component.html
@@ -3,7 +3,7 @@
   <div class="col col-11">
     <span [ngSwitch]="genre">
       <span *ngSwitchCase="'ACTION'">Action</span>
-      <span *ngSwitchCase="'COMEDY'">Comedy</span>
+      <span *ngSwitchCase="'LUSTIG'">Lustig</span>
       <span *ngSwitchDefault>unbekannt</span>
     </span>
   </div>
