--- a/src/app/film/suche-filme/suchformular/suche-genre.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-genre.component.html
@@ -19,13 +19,13 @@
       <input
         type="radio"
         class="form-check-input"
-        id="comedyInput"
+        id="lustigInput"
         [(ngModel)]="genre"
         name="genre"
-        value="COMEDY"
+        value="LUSTIG"
         (change)="onChange($event)"
       />
-      <label class="radio-inline ms-1" for="comedyInput"> COMEDY </label>
+      <label class="radio-inline ms-1" for="lustigInput"> LUSTIG </label>
     </div>
   </div>
 </div>
