--- a/src/app/film/update-film/update-genre.component.html
+++ b/src/app/film/update-film/update-genre.component.html
@@ -4,7 +4,7 @@
   <div class="col col-10 gy-3" [formGroup]="updateForm">
     <select class="form-select" formControlName="genre">
       <option value="ACTION">Action</option>
-      <option value="COMEDY">Comedy</option>
+      <option value="LUSTIG">Lustig</option>
     </select>
   </div>
 </div>
