--- a/src/app/film/create-film/create-genre.component.html
+++ b/src/app/film/create-film/create-genre.component.html
@@ -8,7 +8,7 @@
         id="LustigInput"
         formControlName="genre"
         name="genre"
-        value="LUSTIG"
+        value="L"
       />
       <label class="radio-inline ms-1" for="LustigInput"> Lustig </label>
     </div>
@@ -20,7 +20,7 @@
         id="ActionInput"
         formControlName="genre"
         name="genre"
-        value="ACTION"
+        value="A"
       />
       <label class="radio-inline ms-1" for="ActionInput"> Action </label>
     </div>
