--- a/src/app/layout/header/nav.component.html
+++ b/src/app/layout/header/nav.component.html
@@ -59,7 +59,7 @@
       <a
         routerLink="/filme/balkendiagramm"
         class="dropdown-item"
-        aria-label="Balkendiagramm fuer Rating "
+        aria-label="Balkendiagramm fuer Bewertung "
       >
         <i class="material-icons">bar_chart</i>
         <span class="ms-1">Balkendiagramm</span>
@@ -67,7 +67,7 @@
       <a
         routerLink="/filme/liniendiagramm"
         class="dropdown-item"
-        aria-label="Liniendiagramm fuer Rating "
+        aria-label="Liniendiagramm fuer Bewertung "
       >
         <i class="material-icons">multiline_chart</i>
         <span class="ms-1">Liniendiagramm</span>
@@ -75,7 +75,7 @@
       <a
         routerLink="/filme/tortendiagramm"
         class="dropdown-item"
-        aria-label="Tortendiagramm fuer Rating "
+        aria-label="Tortendiagramm fuer Bewertung "
       >
         <i class="material-icons">pie_chart</i>
         <span class="ms-1">Tortendiagramm</span>
