--- a/src/app/film/create-film/create-studio.component.html
+++ b/src/app/film/create-film/create-studio.component.html
@@ -10,7 +10,7 @@
         [class.is-valid]="studio.valid && studio.touched"
       >
         <option value="">Einen Studio ausw&auml;hlen</option>
-        <option value="DISNEY">Disney</option>
+        <option value="D">Disney</option>
         <option value="WARNER">Warner</option>
       </select>
 
