--- a/src/app/film/details-film/stammdaten/details-studio.component.html
+++ b/src/app/film/details-film/stammdaten/details-studio.component.html
@@ -2,7 +2,7 @@
   <label class="col col-1"> Studio </label>
   <div class="col col-11">
     <span [ngSwitch]="studio">
-      <span *ngSwitchCase="'DISNEY'">Disney</span>
+      <span *ngSwitchCase="'D'">Disney</span>
       <span *ngSwitchCase="'WARNER'">Warner</span>
       <span *ngSwitchDefault>unbekannt</span>
     </span>
