--- a/src/app/film/suche-filme/suchformular/suche-studio.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-studio.component.html
@@ -9,7 +9,7 @@
       (change)="onChange($event)"
     >
       <option value=""></option>
-      <option value="DISNEY">Disney</option>
+      <option value="D">Disney</option>
       <option value="WARNER">Warner</option>
     </select>
   </div>
