--- a/src/app/film/update-film/update-studio.component.html
+++ b/src/app/film/update-film/update-studio.component.html
@@ -3,7 +3,7 @@
 
   <div class="col col-10 gy-3" [formGroup]="updateForm">
     <select class="form-select" formControlName="studio">
-      <option value="DISNEY">Disney</option>
+      <option value="D">Disney</option>
       <option value="WARNER">Warner</option>
     </select>
   </div>
