Genre & Warner fix

--- a/src/app/film/create-film/create-studio.component.html
+++ b/src/app/film/create-film/create-studio.component.html
@@ -11,7 +11,7 @@
       >
         <option value="">Einen Studio ausw&auml;hlen</option>
         <option value="D">Disney</option>
-        <option value="WARNER">Warner</option>
+        <option value="W">Warner</option>
       </select>
 
       <div
