--- a/src/app/film/details-film/schauspieler/details-schauspieler.component.html
+++ b/src/app/film/details-film/schauspieler/details-schauspieler.component.html
@@ -3,8 +3,8 @@
     <div class="checkbox">
       <input type="checkbox" checked disabled class="checkbox" />
       <label class="ms-2" [ngSwitch]="schauspieler">
-        <span *ngSwitchCase="'SALMA'">Salma</span>
-        <span *ngSwitchCase="'LEONARDO'">Leonardo</span>
+        <span *ngSwitchCase="'S'">Salma</span>
+        <span *ngSwitchCase="'L'">Leonardo</span>
       </label>
     </div>
   </div>
