--- a/src/app/film/details-film/stammdaten/details-genre.component.html
+++ b/src/app/film/details-film/stammdaten/details-genre.component.html
@@ -2,8 +2,8 @@
   <label class="col col-1"> Genre </label>
   <div class="col col-11">
     <span [ngSwitch]="genre">
-      <span *ngSwitchCase="'ACTION'">Action</span>
-      <span *ngSwitchCase="'LUSTIG'">Lustig</span>
+      <span *ngSwitchCase="'A'">Action</span>
+      <span *ngSwitchCase="'L'">Lustig</span>
       <span *ngSwitchDefault>unbekannt</span>
     </span>
   </div>
