--- a/src/app/film/suche-filme/suchformular/suche-genre.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-genre.component.html
@@ -8,11 +8,11 @@
         id="actionInput"
         [(ngModel)]="genre"
         name="genre"
-        value="ACTION"
+        value="A"
         (change)="onChange($event)"
       />
       <!-- margin left -->
-      <label class="radio-inline ms-1" for="actionInput"> ACTION </label>
+      <label class="radio-inline ms-1" for="actionInput"> A </label>
     </div>
 
     <div class="form-check">
@@ -22,10 +22,10 @@
         id="lustigInput"
         [(ngModel)]="genre"
         name="genre"
-        value="LUSTIG"
+        value="L"
         (change)="onChange($event)"
       />
-      <label class="radio-inline ms-1" for="lustigInput"> LUSTIG </label>
+      <label class="radio-inline ms-1" for="lustigInput"> L </label>
     </div>
   </div>
 </div>
