--- a/src/app/film/suche-filme/suchformular/suche-studio.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-studio.component.html
@@ -10,7 +10,7 @@
     >
       <option value=""></option>
       <option value="D">Disney</option>
-      <option value="WARNER">Warner</option>
+      <option value="W">Warner</option>
     </select>
   </div>
 </div>
