--- a/src/app/film/details-film/stammdaten/details-studio.component.html
+++ b/src/app/film/details-film/stammdaten/details-studio.component.html
@@ -3,7 +3,7 @@
   <div class="col col-11">
     <span [ngSwitch]="studio">
       <span *ngSwitchCase="'D'">Disney</span>
-      <span *ngSwitchCase="'WARNER'">Warner</span>
+      <span *ngSwitchCase="'W'">Warner</span>
       <span *ngSwitchDefault>unbekannt</span>
     </span>
   </div>
