Anpassungen bei den Genres

--- a/src/app/film/suche-filme/suchformular/suche-genre.component.html
+++ b/src/app/film/suche-filme/suchformular/suche-genre.component.html
@@ -12,7 +12,7 @@
         (change)="onChange($event)"
       />
       <!-- margin left -->
-      <label class="radio-inline ms-1" for="actionInput"> A </label>
+      <label class="radio-inline ms-1" for="actionInput"> Action </label>
     </div>
 
     <div class="form-check">
@@ -25,7 +25,7 @@
         value="L"
         (change)="onChange($event)"
       />
-      <label class="radio-inline ms-1" for="lustigInput"> L </label>
+      <label class="radio-inline ms-1" for="lustigInput"> Lustig </label>
     </div>
   </div>
 </div>
