--- a/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
+++ b/src/app/film/suche-filme/gefundene-filme/gefundene-filme.component.html
@@ -45,8 +45,8 @@
           <td (click)="onClick(film)">
             <span *ngFor="let schauspieler of film.schauspieler">
               <span [ngSwitch]="schauspieler">
-                <span *ngSwitchCase="'SPANNEND'"> Spannend <br /> </span>
-                <span *ngSwitchCase="'GRUSELIG'"> Gruselig </span>
+                <span *ngSwitchCase="'S'"> Salma <br /> </span>
+                <span *ngSwitchCase="'L'"> Leonardo </span>
               </span>
             </span>
           </td>
